--- a/practica16.html
+++ b/practica16.html
@@ -8,6 +8,7 @@
 <body>
 	<p><img src="C:/Users/JOSE%20LUIS%20HERNANDEZ/Desktop/puente-de-japon.jpg" class="imageflottante" alt="imagen flotante" /> </p>
 	<p>Este texto está escrito a la derecha de la imagen flotante.</p>
+	<p>esta es la imagen.</p>
 	<p class="debajo">Este texto está escrito bajo la imagen flotante.</p>
 </body>
 </html>
